--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-shadow {
+  -webkit-box-shadow: 0px 0px 300px 82px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 300px 82px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 300px 82px rgba(0, 0, 0, 0.75);
+}
